# stargazer

./: .gitignore  CLAUDE.md  GEMINI.md  README.md  ROADMAP.md  pyproject.toml
scripts/: debug.sh  launch.sh  run_on_all.py
src/: main.py
src/cosmonaut/: __init__.py  cli.py  meta.py  storage.py
src/cosmonaut/cli/: base.py  discover.py  investigate.py  map.py  ssh.py  web.py
src/cosmonaut/discovery/: dependencies.py  hostname.py  network.py
src/cosmonaut/explain/: explain.py
src/cosmonaut/models/: host.py
src/cosmonaut/rendering/: console.py  graph.py  json.py
src/cosmonaut/ssh/: client.py  specs.py
src/cosmonaut/web/: utils.py
