[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cosmonaut"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "paramiko>=3.5.1",
    "typer[all]>=0.16.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = [
  "cosmonaut",
  "cosmonaut.cli"
]

[project.scripts]
cosmonaut = "cosmonaut:app"
